--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "nuxt-property-decorator": "^1.3.1",
     "vuex-class": "0.3.1"
   },
+  "engines": {
+    "node": ">=6.11",
+    "npm": ">=5.6.0"
+  },
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
