--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "vuex-class": "0.3.1"
   },
   "engines": {
-    "node": ">=6.11",
+    "node": "10.6.0",
     "npm": ">=5.6.0"
   },
   "scripts": {
