--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
-    "@nuxtjs/dotenv": "^1.3.0",
     "@nuxtjs/pwa": "^2.6.0",
+    "@types/node": "^11.11.3",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "msal": "^0.2.4",
     "nuxt": "2.3.4",
     "nuxt-property-decorator": "^1.3.1",
     "vuex-class": "0.3.1"
