--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,17 @@
-old_*/*
-copy.bat
+# dependencies
+node_modules
+
+# logs
+npm-debug.log
+
+# Nuxt build
+.nuxt
+
+# Nuxt generate
+dist
+
+# Workbox cache
+sw.*
+
+#VSのファイル
+.vscode
