--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@nuxtjs/google-analytics": "^2.2.0",
     "@nuxtjs/pwa": "^2.6.0",
     "@types/node": "^11.13.5",
+    "cross-env": "^5.2.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "js-cookie": "^2.2.0",
     "msal": "^0.2.4",
     "nuxt": "2.3.4",
     "nuxt-property-decorator": "^1.3.1",
+    "vee-validate": "^2.2.4",
     "vue-awesome-swiper": "^3.1.3",
     "vue-infinite-loading": "^2.4.4",
     "vue-linkify": "^1.0.1",
@@ -26,6 +28,14 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
+    "build:prd": "cross-env NODE_ENV=\"production\" nuxt build",
+    "build:dev": "cross-env NODE_ENV=\"development\" nuxt build",
+    "build:uli": "cross-env NODE_ENV=\"uliiq\" nuxt build",
+    "build:loc": "cross-env NODE_ENV=\"local\" nuxt build",
+    "start:prd": "cross-env NODE_ENV=\"production\" nuxt start",
+    "start:dev": "cross-env NODE_ENV=\"development\" nuxt start",
+    "start:uli": "cross-env NODE_ENV=\"uliiq\" nuxt start",
+    "start:loc": "cross-env NODE_ENV=\"local\"nuxt start",
     "generate": "nuxt generate"
   },
   "devDependencies": {
