--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@nuxtjs/google-analytics": "^2.2.0",
     "@nuxtjs/pwa": "^2.6.0",
     "@types/node": "^11.13.5",
+    "cookie-universal-nuxt": "^2.0.14",
     "cross-env": "^5.2.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "js-cookie": "^2.2.0",
