--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "js-cookie": "^2.2.0",
     "msal": "^0.2.4",
+    "node-sass": "^4.12.0",
     "nuxt": "2.3.4",
     "nuxt-property-decorator": "^1.3.1",
+    "sass-loader": "^7.1.0",
     "vee-validate": "^2.2.4",
     "vue-awesome-swiper": "^3.1.3",
+    "vue-croppa": "^1.3.8",
     "vue-infinite-loading": "^2.4.4",
     "vue-linkify": "^1.0.1",
+    "vuejs-clipper": "^1.1.0",
     "vuex-class": "0.3.1",
     "vuex-persistedstate": "^2.5.4"
   },
