--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vee-validate": "^2.2.4",
     "vue-awesome-swiper": "^3.1.3",
     "vue-infinite-loading": "^2.4.4",
+    "vue-lazyload": "^1.3.2",
     "vue-linkify": "^1.0.1",
     "vuex-class": "0.3.1",
     "vuex-persistedstate": "^2.5.4"
